[package]
name = "plane_drawer"
version = "0.1.0"
authors = ["Daniel Kutch"]
edition = "2021"

[lib]
name = "plane_drawer"
path = "src/lib/lib.rs"

[[bin]]
name = "example"
path = "src/bin/example.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
fixed = {version = "1.26", features = ["serde"]}
fixed-sqrt = "0.2.5"
fixed_trigonometry = "0.4.3"
minifb = "0.28"


# my_crate = { version = "0.1", features = [] }
# my_crate = { git = "github url", rev = "git hash of commit" }
# my_crate = { path = "../../my_crate" }
